src/test/ui/resolve/suggest-path-instead-of-mod-dot-item.stderr
error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:27:5
   |
27 |     a.I
   |     ^--
   |     |
   |     did you mean `a::I`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:32:5
   |
32 |     a.g()
   |     ^----
   |     |
   |     did you mean `a::g(...)`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:37:5
   |
37 |     a.b.J
   |     ^--
   |     |
   |     did you mean `a::b`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:42:5
   |
42 |     a::b.J
   |     ^^^---
   |     |  |
   |     |  did you mean `I`?
   |     did you mean `a::b::J`?

error[E0423]: expected value, found module `a`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:47:5
   |
47 |     a.b.f();
   |     ^--
   |     |
   |     did you mean `a::b`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:50:12
   |
50 |     v.push(a::b);
   |            ^^^-
   |               |
   |               did you mean `I`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:55:5
   |
55 |     a::b.f()
   |     ^^^-----
   |     |  |
   |     |  did you mean `I`?
   |     did you mean `a::b::f(...)`?

error[E0423]: expected value, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:60:5
   |
60 |     a::b
   |     ^^^-
   |        |
   |        did you mean `I`?

error[E0423]: expected function, found module `a::b`
  --> $DIR/suggest-path-instead-of-mod-dot-item.rs:65:5
   |
65 |     a::b()
   |     ^^^-
   |        |
   |        did you mean `I`?

error[E0601]: main function not found

error: aborting due to 10 previous errors

